--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview --host"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "recharts": "^2.12.7",
-    "axios": "^1.7.7"
+    "react-router-dom": "^7.9.3",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
-    "vite": "^5.4.8",
-    "@vitejs/plugin-react": "^4.3.1"
+    "@vitejs/plugin-react": "^4.3.1",
+    "vite": "^5.4.8"
   }
 }
